# VapourSynth-EEDI2

./: meson.build
.github/workflows/: build.yaml
EEDI2/: EEDI2.cpp
